Add search and pagination functionality to CatalogItem; enhance service methods and repository queries for improved item retrieval